--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "./bin/www",
   "scripts": {
-    "start": "nodemon",
+    "start": "nodemon ./app.js",
     "seed": "cross-env DB_ENABLE_LOGGING=true node './seed'"
   },
   "dependencies": {
@@ -13,11 +13,12 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "~4.17.1",
+    "cross-env": "^7.0.2",
+    "promise.prototype.finally": "^3.1.3",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
+    "morgan": "~1.10.0",
     "nodemon": "^2.0.16",
-    "pug": "^3.0.2",
     "sequelize": "^6.20.0",
     "sqlite3": "^5.0.8"
   }
