post review commit

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rest-api-sql-v3",
   "version": "0.0.0",
   "private": true,
-  "main": "./bin/www",
+  "main": "./app.js",
   "scripts": {
     "start": "nodemon ./app.js",
     "seed": "cross-env DB_ENABLE_LOGGING=true node './seed'"
